--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -472,6 +472,10 @@ h6 {
 }
 
 @media (min-width: 1280px) {
+	.navbar .menu-boy {
+		display: none;
+	}
+
 	.mobile-nav-show,
 	.mobile-nav-hide {
 		display: none;
@@ -498,7 +502,7 @@ h6 {
 		inset: 0;
 		padding: 50px 0 10px 0;
 		margin: 0;
-		background: rgba(255, 255, 255, 0.9);
+		background: var(--color-gray);
 		overflow-y: auto;
 		transition: 0.3s;
 		z-index: 9998;
@@ -511,10 +515,10 @@ h6 {
 		justify-content: space-between;
 		padding: 10px 20px;
 		font-family: var(--font-primary);
-		font-size: 13px;
+		font-size: 18px;
 		text-transform: uppercase;
 		font-weight: 400;
-		color: rgba(255, 255, 255, 0.5);
+		color: var(--color-default);
 		letter-spacing: 1px;
 		white-space: nowrap;
 		transition: 0.3s;
@@ -527,11 +531,15 @@ h6 {
 		margin-left: 5px;
 	}
 
+	.navbar li:first-child {
+		padding-top: 30px;
+	}
+
 	.navbar a:hover,
 	.navbar .active,
 	.navbar .active:focus,
 	.navbar li:hover > a {
-		color: #fff;
+		color: var(--color-secondary);
 	}
 
 	.navbar .dropdown ul,
