--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -156,8 +156,8 @@ h6 {
 	bottom: -15px;
 	z-index: 99999;
 	background: var(--color-default);
-	width: 44px;
-	height: 44px;
+	width: 55px;
+	height: 55px;
 	border-radius: 10px;
 	transition: all 0.4s;
 }
@@ -399,6 +399,7 @@ h6 {
 	.navbar .active:focus,
 	.navbar li:hover > a {
 		color: #000;
+		font-weight: 500;
 	}
 
 	.navbar .dropdown ul {
@@ -990,15 +991,6 @@ h6 {
 	border-radius: 20px;
 }
 
-.services .service-item:before {
-	content: "";
-	position: absolute;
-	background: #1d1f20;
-	top: -200px;
-	transition: all 0.3s;
-	z-index: -1;
-}
-
 .services .service-item i {
 	background: var(--color-primary);
 	color: var(--color-background);
@@ -1027,25 +1019,6 @@ h6 {
 	line-height: 24px;
 	font-size: 14px;
 	margin: 15px 0 0 0;
-}
-
-.services .service-item:hover:before {
-	background: var(--color-primary);
-	right: 0;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	border-radius: 0px;
-}
-
-.services .service-item:hover h4 a,
-.services .service-item:hover li {
-	color: #fff;
-}
-
-.services .service-item:hover i {
-	background: #fff;
-	color: var(--color-primary);
 }
 
 /*--------------------------------------------------------------
@@ -1404,7 +1377,7 @@ h6 {
 	transform: translate(-50%, -50%);
 }
 .footer-59391 .social li a:hover {
-	color: #3e64ff;
+	color: var(--color-primary);
 }
 
 .footer-95942 {
@@ -1420,7 +1393,7 @@ h6 {
 	color: #777;
 }
 .footer-95942 .nav-links li a:hover {
-	color: #4200ff;
+	color: var(--color-primary);
 }
 .footer-95942 .social.app {
 	font-size: 13px;
@@ -1434,7 +1407,7 @@ h6 {
 	color: #ccc;
 }
 .footer-95942 .social li a:hover {
-	color: #4200ff;
+	color: var(--color-primary);
 }
 .footer-95942 .social.nav-left li:first-child a {
 	padding-left: 0px;
@@ -1557,7 +1530,7 @@ h6 {
 	font-weight: 900;
 }
 .footer-16371 .footer-site-logo a {
-	color: #4200ff;
+	color: var(--color-primary);
 }
 .footer-16371 .nav-links {
 	padding: 0;
@@ -1571,7 +1544,7 @@ h6 {
 	color: #000;
 }
 .footer-16371 .nav-links li a:hover {
-	color: #4200ff;
+	color: var(--color-primary);
 }
 .footer-16371 .social h3 {
 	font-weight: bold;
@@ -1643,7 +1616,7 @@ h6 {
 	font-size: 14px;
 }
 .footer-39201 .subscribe .btn-submit {
-	background: #614ad3;
+	background: var(--color-primary);
 	height: 40px;
 	border-radius: 30px;
 	padding-left: 30px;
@@ -1670,7 +1643,7 @@ h6 {
 	color: #9d9d9d;
 }
 .footer-39201 .nav-links li a:hover {
-	color: #614ad3;
+	color: var(--color-primary);
 }
 .footer-39201 .social li {
 	display: inline-block;
@@ -1681,7 +1654,7 @@ h6 {
 	color: #9d9d9d;
 }
 .footer-39201 .social li a:hover {
-	color: #614ad3;
+	color: var(--color-primary);
 }
 
 /*--------------------------------------------------------------
@@ -1795,4 +1768,8 @@ button:active {
 
 .terraverde-unit.active {
 	display: contents;
+}
+
+.room {
+	cursor: pointer;
 }
